Captcha fix on mobile devices

--- a/styles/style-profile.css
+++ b/styles/style-profile.css
@@ -764,8 +764,6 @@ form{
         flex-direction: column;
     }
     .captcha{
-        visibility: visible;
-        opacity: 1;
         max-width: 100%;
         justify-items: center;
     }
